[gd_scene load_steps=4 format=3 uid="uid://03skpyxt32fu"]

[ext_resource type="Script" path="res://common/screens/pause_screen/pause_screen.gd" id="1_vu7sv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmc5f"]
bg_color = Color(0.101961, 0.0862745, 0.270588, 0.65098)

[sub_resource type="LabelSettings" id="LabelSettings_8ijhw"]
font_size = 48
font_color = Color(0.623529, 0.611765, 0.74902, 1)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vu7sv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kmc5f")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -185.0
offset_top = 100.0
offset_right = 185.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 130

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 99
alignment = 1

[node name="Title" type="Label" parent="Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_8ijhw")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="ResumeButton" type="Button" parent="Control/Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
size_flags_vertical = 4
text = "Resume"
flat = true

[node name="QuitButton" type="Button" parent="Control/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"
flat = true

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="button_down" from="Control/Panel/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="mouse_entered" from="Control/Panel/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_button_hover"]
[connection signal="mouse_entered" from="Control/Panel/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
